@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLINFO_RTSP_* constants (libcurl 7.20.0+).
+
         * Added CURLOPT_XOAUTH2_BEARER (libcurl 7.33.0+).
 
         * Added CURLOPT_SASL_IR (libcurl 7.31.0+).
